overflow issue fixed

--- a/client/src/assets/styles/common/layout/_rightContentBox.scss
+++ b/client/src/assets/styles/common/layout/_rightContentBox.scss
@@ -4,6 +4,7 @@
         min-height: 120px;
         width: 80%;
         margin: 16px;
+        overflow: auto;
         border-radius: 8px;
         background: linear-gradient(135deg, #0F766E, #10B981, #BBF7D0);
     }
